Adding a box where I fetch the users Spotify playlists

--- a/src/index.css
+++ b/src/index.css
@@ -15,12 +15,6 @@ code {
     monospace;
 }
 
-/* .webgl {
-  position: fixed;
-  width: 100vw;
-  height: 100vh;
-  z-index: -1;
-  top: 0;
-  left: 0;
-  outline: none;
-} */
+.dg.ac {
+  display: none;
+}
